<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout
        android:id="@+id/linear_layout"
        xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="77dp"
        android:orientation="vertical"
        android:textAlignment="viewEnd">
        <TextView
            android:id="@+id/tv_question_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/question"
            android:textColor="@color/white"
            android:textSize="34sp"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/tv_question"
            android:layout_width="wrap_content"
            android:layout_height="89dp"
            android:layout_margin="20dp"
            android:text="@string/question_1"
            android:textColor="@color/white"
            android:textSize="20sp"/>

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="285dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:gravity="center">

            <RadioButton
                android:id="@+id/optionA"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:checked="false"
                android:gravity="left|end"
                android:layoutDirection="rtl"
                android:singleLine="false"
                android:text="@string/A"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/optionB"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:checked="false"
                android:gravity="left"
                android:layoutDirection="rtl"
                android:text="@string/B"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/optionC"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:checked="false"
                android:gravity="left"
                android:layoutDirection="rtl"
                android:text="@string/C"
                android:textColor="@color/white"
                android:textSize="16dp" />

            <RadioButton
                android:id="@+id/optionD"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="left"
                android:layoutDirection="rtl"
                android:text="@string/D"
                android:textColor="@color/white"
                android:textSize="16sp" />

        </RadioGroup>
    </LinearLayout>
